--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondActivity">
+    tools:context=".SecondActivity"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/button_2"
@@ -12,4 +13,10 @@
         android:layout_height="wrap_content"
         android:text="button_2"/>
 
+    <EditText
+        android:id="@+id/edi_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="提示消息" />
 </LinearLayout>
