--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -19,11 +19,10 @@
         android:text="第一个TextView框"
         />
 
-    <EditText
-        android:id="@+id/edi_1"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/image_view_1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:hint="提示消息"
+        android:src="@drawable/timg"
         />
 </LinearLayout>
