--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -21,8 +21,8 @@
 
     <ImageView
         android:id="@+id/image_view_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150sp"
+        android:layout_height="150sp"
         android:src="@drawable/timg"
         />
 </LinearLayout>
