--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -25,4 +25,11 @@
         android:layout_height="150sp"
         android:src="@drawable/timg"
         />
+
+    <EditText
+        android:id="@+id/edit_text_local"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="保存到本地"
+        />
 </LinearLayout>
