--- a/app/src/main/res/layout/first_layout.xml
+++ b/app/src/main/res/layout/first_layout.xml
@@ -1,35 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/button_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:text="button_1_1" />
+        android:text="button_1_1"
+        android:textAllCaps="false" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="25sp"
-        android:textColor="@color/black"
         android:text="第一个TextView框"
-        />
+        android:textColor="@color/black"
+        android:textSize="25sp" />
 
     <ImageView
         android:id="@+id/image_view_1"
         android:layout_width="150sp"
         android:layout_height="150sp"
-        android:src="@drawable/timg"
-        />
+        android:src="@drawable/timg" />
 
     <EditText
         android:id="@+id/edit_text_local"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="保存到本地"
-        />
+        android:hint="保存到本地" />
 </LinearLayout>
